---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Update readme
    - Track and check items dumped at space locations
    - Cache item names available at space location
    - Cache the amount of items too
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 05. 04
  Info:
    - Test covering an asteroid with items
    - Try setting the orientation target to a train doing loops on another surface
    - Abandon the train idea since render surfaces do not interact
    - Blep
    - Test rotation on a turret
    - Future proofing
    - Setup the asteroid prototype
    - Spawn space debris at all space locations with asteroid spawns
    - Make the items impact your platform
    - Give the debris a texture and an explosion
    - Research the entity death event
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 05. 04
  Info:
    - Initial commit